@@ -1,7 +1,5 @@
 package framework.util;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 public class TypeReflect {
@@ -9,17 +7,17 @@ public class TypeReflect {
     private static final Map<Class<?>, Class<?>> PRIMITIVE_WRAPPERS;
     static {
         try {
-            Map<Class<?>, Class<?>> types = new HashMap<Class<?>, Class<?>>();
-            types.put(boolean.class, Boolean.class);
-            types.put(byte.class, Byte.class);
-            types.put(char.class, Character.class);
-            types.put(double.class, Double.class);
-            types.put(float.class, Float.class);
-            types.put(int.class, Integer.class);
-            types.put(long.class, Long.class);
-            types.put(short.class, Short.class);
-            types.put(void.class, Void.class);
-            PRIMITIVE_WRAPPERS = Collections.unmodifiableMap(types);
+            PRIMITIVE_WRAPPERS = Map.of(
+                    boolean.class, Boolean.class,
+                    byte.class, Byte.class,
+                    char.class, Character.class,
+                    double.class, Double.class,
+                    float.class, Float.class,
+                    int.class, Integer.class,
+                    long.class, Long.class,
+                    short.class, Short.class,
+                    void.class, Void.class
+            );
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
